# rpi-auto-gym

./: .gitignore  README.md  agents.md  pyproject.toml
.opencode/: worktree.jsonc
src/: main.py
src/camera/: __init__.py  base.py  factory.py  file_source.py  pi_source.py  webcam_source.py
src/camera/tests/: test_camera.py
src/classifier/: __init__.py  angles.py  classifier.py  pose_types.py  types.py
src/classifier/exercises/: jumping_jack.py  pushup.py  squat.py
src/classifier/tests/: test_classifier.py
src/pose/: __init__.py  base.py  coral_estimator.py  factory.py  hailo_estimator.py  mediapipe_estimator.py  types.py
src/pose/tests/: test_pose.py
src/session/: __init__.py  classifier_types.py  session.py  types.py
src/session/tests/: test_session.py
src/ui/: __init__.py  _headless.py  app.py  debug_overlay.py  session_protocol.py  session_types.py
src/ui/tests/: test_ui.py
